feat: create get start js file

--- a/getstart.html
+++ b/getstart.html
@@ -10,22 +10,22 @@
 <body>
     <div class="main">
         <div id="image">
-            <!-- <img src="assets/images/onboarding_1.png" alt=""> -->
-            <!-- <img src="assets/images/onboarding_2.png" alt=""> -->
-            <img src="assets/images/onboarding_3.png" alt="">
+            <img src="assets/images/onboarding_1.png" alt="">
         </div>
         <div id="text">
-            <!-- <p>We provide high quality products just for you</p> -->
+            <p>We provide high quality products just for you</p>
             <!-- <p>Your satisfaction is our number one periority</p> -->
-            <p>Let's fulfill your fashion needs with shoearight now!</p>
+            <!-- <p>Let's fulfill your fashion needs with shoearight now!</p> -->
             <div id="slider">
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <!-- <button>Next</button> -->
-            <button>Get Started</button>
+            <button>Next</button>
+            <!-- <button>Get Started</button> -->
         </div>
     </div>
+
+    <script src="assets/js/getstart.js"></script>
 </body>
 </html>
