feat: get all data

--- a/home.html
+++ b/home.html
@@ -32,43 +32,43 @@
     </div>
 
     <div id="catagories">
-      <div>
+      <div data-brand="nike">
         <div class="img">
           <img src="assets/images/Nike.png" alt="" />
         </div>
         <p>Nike</p>
       </div>
-      <div>
+      <div data-brand="Adidas">
         <div class="img">
           <img src="assets/images/adidas.png" alt="" />
         </div>
         <p>Adidas</p>
       </div>
-      <div>
+      <div data-brand="Puma">
         <div class="img">
           <img src="assets/images/Puma.png" alt="" />
         </div>
         <p>Puma</p>
       </div>
-      <div>
+      <div data-brand="Asics">
         <div class="img">
           <img src="assets/images/Asics.png" alt="" />
         </div>
         <p>Asics</p>
       </div>
-      <div>
+      <div data-brand="Reebok">
         <div class="img">
           <img src="assets/images/Reebok.png" alt="" />
         </div>
         <p>Reebok</p>
       </div>
-      <div>
+      <div data-brand="new Balance">
         <div class="img">
           <img src="assets/images/new balance.png" alt="" />
         </div>
         <p>New Ba...</p>
       </div>
-      <div>
+      <div data-brand="Converse">
         <div class="img">
           <img src="assets/images/Converse.png" alt="" />
         </div>
@@ -87,86 +87,47 @@
     <div class="main">
       <div class="mainNav">
         <div>All</div>
-        <div>Nike</div>
-        <div>Adidas</div>
-        <div>Puma</div>
-        <div>Asics</div>
-        <div>Reebok</div>
-        <div>New Balance</div>
-        <div>Converse</div>
+        <div data-brand="nike">Nike</div>
+        <div data-brand="Adidas">Adidas</div>
+        <div data-brand="Puma">Puma</div>
+        <div data-brand="Asics">Asics</div>
+        <div data-brand="Reebok">Reebok</div>
+        <div data-brand="New Balance">New Balance</div>
+        <div data-brand="Converse">Converse</div>
       </div>
 
-      <div class="shoes">
-        <div class="card">
-          <div class="shoe">
-            <img src="assets/images/shoe.png" alt="" />
-          </div>
-          <div class="text">
-            <p class="shoeName">K-Swiss ista Train...</p>
-            <p class="shoePrice">$ 85.00</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="shoe">
-            <img src="assets/images/shoe.png" alt="" />
-          </div>
-          <div class="text">
-            <p class="shoeName">K-Swiss ista Train...</p>
-            <p class="shoePrice">$ 85.00</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="shoe">
-            <img src="assets/images/shoe.png" alt="" />
-          </div>
-          <div class="text">
-            <p class="shoeName">K-Swiss ista Train...</p>
-            <p class="shoePrice">$ 85.00</p>
-          </div>
-        </div>
-
-        <div class="card">
-            <div class="shoe">
-              <img src="assets/images/shoe.png" alt="" />
-            </div>
-            <div class="text">
-              <p class="shoeName">K-Swiss ista Train...</p>
-              <p class="shoePrice">$ 85.00</p>
-            </div>
-          </div>
-      </div>
+      <div class="shoes"></div>
     </div>
 
     <footer>
-        <div>
-            <!-- <img src="assets/images/house-door-fill.png" alt=""> -->
-            <i class="fa fa-home"></i>
-            <p>Home</p>
-        </div>
-        <div>
-            <!-- <img src="assets/images/bag.png" alt=""> -->
-            <i class="fa fa-shopping-bag"></i>
-            <p>Cart</p>
-        </div>
-        <div>
-            <!-- <img src="assets/images/cart2.png" alt=""> -->
-            <i class="fa fa-cart-arrow-down"></i>
-            <p>Orders</p>
-        </div>
-        <div>
-            <!-- <img src="assets/images/wallet2.png" alt=""> -->
-            <i class="fa fa-folder-o"></i>
-            <p>Wallet</p>
-        </div>
-        <div>
-            <!-- <img src="assets/images/person.png" alt=""> -->
-            <i class="fa fa-user-o"></i>
-            <p>Person</p>
-        </div>
+      <div>
+        <!-- <img src="assets/images/house-door-fill.png" alt=""> -->
+        <i class="fa fa-home"></i>
+        <p>Home</p>
+      </div>
+      <div>
+        <!-- <img src="assets/images/bag.png" alt=""> -->
+        <i class="fa fa-shopping-bag"></i>
+        <p>Cart</p>
+      </div>
+      <div>
+        <!-- <img src="assets/images/cart2.png" alt=""> -->
+        <i class="fa fa-cart-arrow-down"></i>
+        <p>Orders</p>
+      </div>
+      <div>
+        <!-- <img src="assets/images/wallet2.png" alt=""> -->
+        <i class="fa fa-folder-o"></i>
+        <p>Wallet</p>
+      </div>
+      <div>
+        <!-- <img src="assets/images/person.png" alt=""> -->
+        <i class="fa fa-user-o"></i>
+        <p>Person</p>
+      </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="assets/js/home.js"></script>
   </body>
 </html>
