--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
   <body>
     <div id="top">
       <div>
-        <i class="fa fa-long-arrow-left"></i>
+        <i class="fa fa-long-arrow-left" onclick="goToHomePage()"></i>
       </div>
       <div id="image">
         <img src="assets/images/shoe.png" alt="" />
@@ -56,9 +56,9 @@
       <div id="quantity">
         <h3>Quantity</h3>
         <div>
-          <i class="fa fa-minus"></i>
+          <i class="fa fa-minus" onclick="minus()"></i>
           <input type="number" value="1" readonly/>
-          <i class="fa fa-plus"></i>
+          <i class="fa fa-plus" onclick="plus()"></i>
         </div>
       </div>
       <div class="hr"></div>
