feat: add slider for product image

--- a/product.html
+++ b/product.html
@@ -13,15 +13,17 @@
   </head>
   <body>
     <div id="top">
-      <div>
+      <!-- <div>
         <i class="fa fa-long-arrow-left" onclick="goToHomePage()"></i>
       </div>
       <div id="image">
         <img src="assets/images/shoe.png" alt="" />
-      </div>
+        <div></div>
+        <div></div>
+      </div> -->
     </div>
     <div id="bottom">
-      <div id="name">
+      <!-- <div id="name">
         <h2>Shoe Name</h2>
         <i class="fa fa-heart-o"></i>
       </div>
@@ -71,7 +73,7 @@
           <i class="fa fa-shopping-bag"></i>
           <h4>Add to Cart</h4>
         </button>
-      </div>
+      </div> -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="assets/js/product.js"></script>
