feat: link checkout and shipping address page

--- a/checkout.html
+++ b/checkout.html
@@ -32,7 +32,7 @@
           <h4>Home</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </div>
-        <div id="edit">
+        <div id="edit" onclick="goToSelectAddress()">
           <i class="fa fa-pencil"></i>
         </div>
       </div>
