feat: link shipping address page to checjout page

--- a/shippingAddress.html
+++ b/shippingAddress.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="navbar">
-      <i class="fa fa-long-arrow-left"></i>
+      <i class="fa fa-long-arrow-left" onclick="goToCheckout()"></i>
       <h3>Shipping Address</h3>
     </div>
 
