feat: add address from shipping page to checkout page

--- a/shippingAddress.html
+++ b/shippingAddress.html
@@ -21,7 +21,7 @@
         <button class="addAddress">Add New Address</button>
       </div>
 
-      <button class="apply">Apply</button>
+      <button class="apply" onclick="updateAddress()">Apply</button>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="assets/js/shippingAddress.js"></script>
   </body>
