--- a/checkout.html
+++ b/checkout.html
@@ -53,7 +53,7 @@
           <i class="fa fa-truck"></i>
           <h4>Choose Shipping Type</h4>
         </div>
-        <i class="fa fa-chevron-right"></i>
+        <i class="fa fa-chevron-right" onclick="goToChooseShipping()"></i>
       </div>
     </div>
 
