feat: add shipping to localstorage

--- a/chooseShipping.html
+++ b/chooseShipping.html
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <button class="apply" onclick="updateAddress()">Apply</button>
+    <button class="apply" onclick="chooseShipping()">Apply</button>
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="assets/js/chooseShipping.js"></script>
