feat: calculate price

--- a/mycart.html
+++ b/mycart.html
@@ -33,7 +33,7 @@
           <h4>Price</h4>
         </div>
         <div id="right">
-          <button>
+          <button onclick="goToCheckoutPage()">
             <h4>Checkout</h4>
             <i class="fa fa-arrow-right"></i>
           </button>
