--- a/chooseShipping.html
+++ b/chooseShipping.html
@@ -27,7 +27,7 @@
           <p>Estimated Arrival, Dec 20-23</p>
         </div>
         <div class="price">
-            $10
+            $ <span>10</span>
         </div>
         <div>
           <input type="radio" name="5" data-id="${item.id}" />
@@ -42,7 +42,7 @@
           <p>Estimated Arrival, Dec 20-22</p>
         </div>
         <div class="price">
-            $15
+            $ <span>15</span>
         </div>
         <div>
           <input type="radio" name="5" data-id="${item.id}" />
@@ -57,7 +57,7 @@
           <p>Estimated Arrival, Dec 19-20</p>
         </div>
         <div class="price">
-            $20
+            $ <span>20</span>
         </div>
         <div>
           <input type="radio" name="5" data-id="${item.id}" />
@@ -72,7 +72,7 @@
           <p>Estimated Arrival, Dec 18-19</p>
         </div>
         <div class="price">
-            $30
+            $ <span>30</span>
         </div>
         <div>
           <input type="radio" name="5" data-id="${item.id}" />
