feat: link payment page and checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -86,7 +86,7 @@
 
     <hr>
 
-    <button>
+    <button onclick="goToPaymentPage()">
       Continue to Payment
       <i class="fa fa-arrow-right"></i>
     </button>
