--- a/chooseShipping.html
+++ b/chooseShipping.html
@@ -30,7 +30,7 @@
             $ <span>10</span>
         </div>
         <div>
-          <input type="radio" name="5" data-id="${item.id}" />
+          <input type="radio" name="5" data-id="1" />
         </div>
       </div>
       <div class="card">
@@ -45,7 +45,7 @@
             $ <span>15</span>
         </div>
         <div>
-          <input type="radio" name="5" data-id="${item.id}" />
+          <input type="radio" name="5" data-id="2" />
         </div>
       </div>
       <div class="card">
@@ -60,7 +60,7 @@
             $ <span>20</span>
         </div>
         <div>
-          <input type="radio" name="5" data-id="${item.id}" />
+          <input type="radio" name="5" data-id="3" />
         </div>
       </div>
       <div class="card">
@@ -75,7 +75,7 @@
             $ <span>30</span>
         </div>
         <div>
-          <input type="radio" name="5" data-id="${item.id}" />
+          <input type="radio" name="5" data-id="4" />
         </div>
       </div>
     </div>
