--- a/payment.html
+++ b/payment.html
@@ -66,7 +66,7 @@
       </div>
       <div class="card">
         <div class="location">
-          <i class="fa fa-credit-card "></i>
+          <i class="fa fa-credit-card"></i>
         </div>
         <div class="addressText input">
           <h4>Master Card</h4>
@@ -77,7 +77,17 @@
       </div>
     </div>
 
-    <button class="apply">Confirm Payment</button>
+    <button class="apply" onclick="sendOrder()">Confirm Payment</button>
+
+    <div class="successful">
+      <div class="icon">
+        <i class="fa fa-cart-arrow-down"></i>
+      </div>
+      <h3>Order Successful!</h3>
+      <p>You have successfully made order.</p>
+      <button class="viewOrder">View Order</button>
+      <button class="home" onclick="gotoHome(event)">Go to Home</button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="assets/js/payment.js"></script>
   </body>
