--- a/mycart.html
+++ b/mycart.html
@@ -22,9 +22,7 @@
       </div>
     </div>
 
-    <div id="shoes">
-      
-    </div>
+    <div id="shoes"></div>
 
     <footer>
       <div id="totalPrice">
@@ -41,15 +39,21 @@
       </div>
       <div id="icons">
         <div>
-          <i class="fa fa-home"></i>
+          <a href="home.html">
+            <i class="fa fa-home" ></i>
+          </a>
           <p>Home</p>
         </div>
         <div>
-          <i class="fa fa-shopping-bag"></i>
+          <a href="#">
+            <i class="fa fa-shopping-bag" style="color: black;"></i>
+          </a>
           <p>Cart</p>
         </div>
         <div>
-          <i class="fa fa-cart-arrow-down"></i>
+          <a href="order.html">
+            <i class="fa fa-cart-arrow-down"></i>
+          </a>
           <p>Orders</p>
         </div>
         <div>
