--- a/home.html
+++ b/home.html
@@ -101,15 +101,21 @@
 
     <footer>
       <div>
-        <i class="fa fa-home"></i>
+        <a href="#">
+          <i class="fa fa-home" style="color: black;"></i>
+        </a>
         <p>Home</p>
       </div>
       <div>
-        <i class="fa fa-shopping-bag"></i>
+        <a href="mycart.html">
+          <i class="fa fa-shopping-bag"></i>
+        </a>
         <p>Cart</p>
       </div>
       <div>
-        <i class="fa fa-cart-arrow-down"></i>
+        <a href="order.html">
+          <i class="fa fa-cart-arrow-down"></i>
+        </a>
         <p>Orders</p>
       </div>
       <div>
@@ -118,7 +124,7 @@
       </div>
       <div>
         <i class="fa fa-user-o"></i>
-        <p>Person</p>
+        <p>Profile</p>
       </div>
     </footer>
 
