--- a/mycart.html
+++ b/mycart.html
@@ -62,7 +62,7 @@
         </div>
         <div>
           <i class="fa fa-user-o"></i>
-          <p>Person</p>
+          <p>Profile</p>
         </div>
       </div>
     </footer>
