feat: add complated orders

--- a/order.html
+++ b/order.html
@@ -23,12 +23,12 @@
     </div>
 
     <div class="link">
-        <a href="" onclick="activeOrders()">Active</a>
-        <a href="">Completed</a>
+        <a href="#" onclick="activeOrders()">Active</a>
+        <a href="#" onclick="complatedOrders()">Completed</a>
     </div>
 
     <div id="shoes">
-        <div class="card">
+        <!-- <div class="card">
             <div class="image">
                 <img src="assets/images/shoe.png" alt="">
             </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     
