--- a/payment.html
+++ b/payment.html
@@ -85,8 +85,8 @@
       </div>
       <h3>Order Successful!</h3>
       <p>You have successfully made order.</p>
-      <button class="viewOrder">View Order</button>
-      <button class="home" onclick="gotoHome(event)">Go to Home</button>
+      <button class="viewOrder" onclick="goToPayment(event)">View Order</button>
+      <button class="home" onclick="goToHome(event)">Go to Home</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="assets/js/payment.js"></script>
