refactore: refactore links

--- a/checkout.html
+++ b/checkout.html
@@ -14,7 +14,7 @@
   <body>
     <div id="navbar">
       <div id="leftDiv">
-        <i class="fa fa-long-arrow-left"></i>
+        <i class="fa fa-long-arrow-left" onclick="goToMyCart()"></i>
         <h3>Checkout</h3>
       </div>
       <div id="rightDiv">
